src/scss/base/_text.scss
@use "../mixins" as mixins;
@use "../variables" as variables;

/**
 * Font styling
 */

body {
    font-family: variables.$font-family-serif;
    font-size: 18px;
    line-height: 1.6;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: variables.$font-family-sans;
    font-weight: 700;
    line-height: 1.2;

    margin-top: 0;
    margin-bottom: 0.5rem;

    > a {
        text-decoration-thickness: 0.1em;
        text-underline-offset: 0.15em;
    }
}

h1 {
    font-size: 2.5em;
}

h2 {
    font-size: 2em;
    margin-top: 2rem;
}

h3 {
    font-size: 1.75em;
    margin-top: 1.75rem;
}

h4 {
    font-size: 1.5em;
    margin-top: 1.5rem;
}

h5 {
    font-size: 1.25em;
    margin-top: 1.25rem;
}

h6 {
    font-size: 1em;
    margin-top: 1rem;
}

mark {
    color: var(--black);
    background-color: var(--yellow);
}

pre,
code,
kbd,
samp {
    font-family: variables.$font-family-monospace;
    color: var(--text);
    background-color: var(--background-contrast);
}

code,
kbd,
samp,
mark {
    padding: 0 0.15em;
}

a {
    font-weight: 700;
    @include mixins.transition(color);
    text-decoration: underline;
    color: var(--primary);

    &:hover,
    &:focus,
    &.active {
        color: var(--primary-contrast-alt);
    }
}

